[gd_scene load_steps=15 format=2]

[ext_resource path="res://water.shader" type="Shader" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Area2D.gd" type="Script" id=3]
[ext_resource path="res://Submarine.gd" type="Script" id=4]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ladder.tscn" type="PackedScene" id=6]
[ext_resource path="res://stair.tscn" type="PackedScene" id=7]
[ext_resource path="res://console.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Destroyer.tscn" type="PackedScene" id=10]

[sub_resource type="ProceduralSky" id=1]
ground_bottom_color = Color( 0.027451, 0.105882, 0.290196, 1 )

[sub_resource type="Environment" id=2]
background_mode = 4
background_sky = SubResource( 1 )
background_color = Color( 0.4, 0.843137, 0.843137, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/sprite_scale = Vector2( 10, 10 )
shader_param/blue_tint = Color( 0, 0.552941, 1, 1 )
shader_param/bottom_tint = Color( 0.0352941, 0.172549, 0.556863, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.42327, 9.46003 )

[node name="Node2D" type="Node2D"]
position = Vector2( 2740, 1890 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="WATER" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( -120, 1110 )
scale = Vector2( 41.0938, 19.1797 )
z_index = -2
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="sky" type="Area2D" parent="."]
editor/display_folded = true
scale = Vector2( 279.096, 94.08 )
space_override = 3
gravity_vec = Vector2( 0, -1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sky"]
position = Vector2( -0.42996, -10.6293 )
shape = SubResource( 4 )

[node name="Submarine" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Control room" type="Node2D" parent="Submarine"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/Control room"]
editor/display_folded = true

[node name="Wall" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]

[node name="Wall6" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, 0 )

[node name="Wall16" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Wall5" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, 0 )

[node name="Wall9" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 100, 0 )

[node name="Wall3" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall8" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Wall11" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Wall4" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 60, 0 )

[node name="Wall7" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="Wall15" parent="Submarine/Control room/Walls" instance=ExtResource( 5 )]
position = Vector2( 140, 0 )

[node name="Walls2" type="Node2D" parent="Submarine/Control room"]
editor/display_folded = true
position = Vector2( 140, -80 )
rotation = -3.14159

[node name="Wall" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 40, -3.8147e-06 )

[node name="Wall17" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 0, -20 )

[node name="Wall12" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="Wall6" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 0, -3.8147e-06 )

[node name="Wall16" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Wall13" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 180, 0 )

[node name="Wall5" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 20, -3.8147e-06 )

[node name="Wall10" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 200, 0 )

[node name="Wall11" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Wall4" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 60, 0 )

[node name="Wall14" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 220, 0 )

[node name="Wall18" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 220, -20 )

[node name="Wall15" parent="Submarine/Control room/Walls2" instance=ExtResource( 5 )]
position = Vector2( 140, 0 )

[node name="PumpRm" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( 0, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/PumpRm"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]

[node name="Wall16" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Wall17" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, -40 )

[node name="Wall2" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall3" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall4" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 60, 0 )

[node name="Wall7" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="Wall8" parent="Submarine/PumpRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -40 )

[node name="Battery1" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( 120, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/Battery1"]
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]

[node name="Wall16" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Wall18" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, -20 )

[node name="Wall17" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, -40 )

[node name="Wall2" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall3" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall4" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( 60, 0 )

[node name="Wall7" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="Wall8" parent="Submarine/Battery1/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -40 )

[node name="Battery2" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( -160, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/Battery2"]
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]

[node name="Wall16" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Wall17" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( 80, -40 )

[node name="Wall2" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall3" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall4" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( 60, 0 )

[node name="Wall7" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="Wall8" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -40 )

[node name="Wall9" parent="Submarine/Battery2/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -20 )

[node name="SonarRoom" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( -50, 60 )
__meta__ = {
"_edit_group_": true
}

[node name="Wall17" parent="Submarine/SonarRoom" instance=ExtResource( 5 )]
position = Vector2( 10, 0 )

[node name="Wall8" parent="Submarine/SonarRoom" instance=ExtResource( 5 )]
position = Vector2( -10, 0 )

[node name="FwdTorpedo" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( 240, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/FwdTorpedo"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]

[node name="Wall6" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, 0 )

[node name="Wall9" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -80 )

[node name="Wall10" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, -80 )

[node name="Wall11" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, -80 )

[node name="Wall12" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -80 )

[node name="Wall13" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 0, -80 )

[node name="Wall14" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, -80 )

[node name="Wall15" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -80 )

[node name="Wall16" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -60 )

[node name="Wall17" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -40 )

[node name="Wall18" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -20 )

[node name="Wall2" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall5" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, 0 )

[node name="Wall3" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall8" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Wall7" parent="Submarine/FwdTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="EngineRm" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( -140, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/EngineRm"]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]

[node name="Wall6" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, 0 )

[node name="Wall9" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -80 )

[node name="Wall10" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, -80 )

[node name="Wall11" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, -80 )

[node name="Wall12" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -80 )

[node name="Wall13" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 0, -80 )

[node name="Wall14" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, -80 )

[node name="Wall15" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -80 )

[node name="Wall16" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -60 )

[node name="Wall2" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall5" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, 0 )

[node name="Wall3" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall8" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Wall7" parent="Submarine/EngineRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="ManouverRm" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( -300, 20 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/ManouverRm"]
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]

[node name="Wall6" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, 0 )

[node name="Wall9" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -80 )

[node name="Wall10" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, -80 )

[node name="Wall11" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, -80 )

[node name="Wall12" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -80 )

[node name="Wall13" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 0, -80 )

[node name="Wall14" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, -80 )

[node name="Wall15" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -80 )

[node name="Wall2" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall5" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, 0 )

[node name="Wall3" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall8" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Wall7" parent="Submarine/ManouverRm/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="BckTorpedo" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( -440, 40 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="Node2D" parent="Submarine/BckTorpedo"]
__meta__ = {
"_edit_group_": true
}

[node name="Wall" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]

[node name="Wall6" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, 0 )

[node name="Wall17" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -20 )

[node name="Wall18" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -40 )

[node name="Wall19" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -60 )

[node name="Wall9" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -80, -80 )

[node name="Wall10" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, -80 )

[node name="Wall11" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, -80 )

[node name="Wall12" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, -80 )

[node name="Wall13" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 0, -80 )

[node name="Wall14" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, -80 )

[node name="Wall15" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, -80 )

[node name="Wall2" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 20, 0 )

[node name="Wall5" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -60, 0 )

[node name="Wall3" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Wall8" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -40, 0 )

[node name="Wall7" parent="Submarine/BckTorpedo/Walls" instance=ExtResource( 5 )]
position = Vector2( -20, 0 )

[node name="ConningTower" type="Node2D" parent="Submarine"]
editor/display_folded = true
position = Vector2( 140, -160 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="Wall17" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 60, -20 )

[node name="Wall21" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 60, -60 )

[node name="Wall6" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 60, -3.8147e-06 )

[node name="Wall7" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 60, -40 )

[node name="Wall5" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 80, -7.62939e-06 )

[node name="Wall10" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 120, -1.14441e-05 )

[node name="Wall14" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 140, -1.14441e-05 )

[node name="Wall18" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 140, -20 )

[node name="Wall19" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 140, -40 )

[node name="Wall20" parent="Submarine/ConningTower" instance=ExtResource( 5 )]
position = Vector2( 140, -60 )

[node name="Ladder" parent="Submarine" instance=ExtResource( 6 )]
scale = Vector2( 1, 8 )

[node name="Ladder2" parent="Submarine" instance=ExtResource( 6 )]
position = Vector2( 20, 20 )
scale = Vector2( 1, 3 )

[node name="Ladder3" parent="Submarine" instance=ExtResource( 6 )]
position = Vector2( -20, -130 )
scale = Vector2( 1, 4 )

[node name="Ladder4" parent="Submarine" instance=ExtResource( 6 )]
position = Vector2( 100, -130 )
scale = Vector2( 1, 4 )

[node name="Wall" parent="Submarine" instance=ExtResource( 7 )]
position = Vector2( -240, 0 )

[node name="Wall2" parent="Submarine" instance=ExtResource( 7 )]
position = Vector2( -400, 20 )

[node name="Wall3" parent="Submarine" instance=ExtResource( 7 )]
position = Vector2( -240, -60 )
rotation = 3.14159

[node name="Wall4" parent="Submarine" instance=ExtResource( 7 )]
position = Vector2( -380, -40 )
rotation = 3.14159

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Submarine"]
polygon = PoolVector2Array( -530, 50, -530, -50, -390, -70, -230, -90, -10, -170, 90, -170, 290, -90, 290, 10, 210, 70, -190, 70 )
__meta__ = {
"_edit_lock_": true
}

[node name="SubArea" type="Area2D" parent="Submarine"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Submarine/SubArea"]
polygon = PoolVector2Array( -530, 50, -530, -50, -390, -70, -230, -90, -10, -170, 90, -170, 290, -90, 290, 10, 210, 70, -190, 70 )
__meta__ = {
"_edit_lock_": true
}

[node name="Console" parent="Submarine" instance=ExtResource( 8 )]
position = Vector2( -49, 40 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
script = ExtResource( 3 )

[node name="Player2" parent="Submarine" instance=ExtResource( 9 )]
position = Vector2( 60, -20 )
UP_KEY = "p2_up"
DOWN_KEY = "p2_down"
RIGHT_KEY = "p2_right"
LEFT_KEY = "p2_left"

[node name="Player" parent="Submarine" instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 0, -32 )
UP_KEY = "ui_up"
DOWN_KEY = "ui_down"
RIGHT_KEY = "ui_right"
LEFT_KEY = "ui_left"

[node name="Camera2D" type="Camera2D" parent="Submarine/Player"]
position = Vector2( 0, 50 )
offset = Vector2( 0, -50 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Destroyer" parent="." instance=ExtResource( 10 )]
position = Vector2( 530, -160 )
collision_layer = 3
collision_mask = 3

[connection signal="body_entered" from="sky" to="sky" method="_on_sky_body_entered"]
[connection signal="body_exited" from="sky" to="sky" method="_on_sky_body_exited"]
[connection signal="body_entered" from="Submarine/SubArea" to="Submarine/SubArea" method="_on_SubArea_body_entered"]
[connection signal="body_exited" from="Submarine/SubArea" to="Submarine/SubArea" method="_on_SubArea_body_exited"]
